README 변경 내용을 반영합니다.

--- a/Seoul-MatZip-2019.ipynb
+++ b/Seoul-MatZip-2019.ipynb
@@ -8,14 +8,14 @@
     "\n",
     "## 개요\n",
     "\n",
-    "* 시사플러스에 게시된 [시사플러스 '2019 서울맛집'](http://m.sisaplusnews.com/news/articleView.html?idxno=22423) 기사의 맛집들을 지도 위에 표시하는 프로젝트입니다.\n",
+    "* [시사플러스 '2019 서울맛집' 기사](http://m.sisaplusnews.com/news/articleView.html?idxno=22423)의 맛집들을 지도 위에 표시하는 프로젝트입니다.\n",
+    "* 정확한 위치를 표시하기보다는 카테고리별 맛집의 분포 등을 재미삼아 보는 것을 목표로 하였습니다.\n",
     "* 이 프로젝트는 [Chang-Joo Park](https://github.com/ChangJoo-Park)님께서 먼저 제안하시고 GeoJSON 사용법 등을 보여주셨습니다. 감사합니다. (_ _)\n",
-    "* 정확한 위치를 지도에 표시하기 보다는 카테고리별 맛집의 분포 등을 재미삼아 보고자 표시하였습니다.\n",
     "\n",
     "## 정제\n",
     "\n",
     "* 기초 데이터는 [시사플러스 '2019 서울맛집'](http://m.sisaplusnews.com/news/articleView.html?idxno=22423)에서 가져왔습니다.\n",
-    "* 전체 데이터 중 `1. 평양냉면`부터 `45. 돼지고기`까지 가져왔으며, 이후 데이터는 손을 많이 탈 것 같아 따로 정제하지 않았습니다.\n",
+    "* 전체 데이터 중 `1. 평양냉면`부터 `45. 돼지고기`까지 가져왔으며, 이후 데이터는 수작업이 많을 것 같아 따로 정제하지 않았습니다.\n",
     "* 기초 데이터는 `동 이름` (` - ` `역 이름`) ` - ` `음식점 이름` (` - ` `기타`) 형태로 정리하였으며, 가게명만 있는 경우 모두 제외하였습니다.\n",
     "  * (`45. 돼지고기`의 경우 소제목을 `기타`에 포함시켰습니다.)\n",
     "* 눈으로 보다가 확인한 오류들은 일부 수정하였습니다.\n",
@@ -24,12 +24,10 @@
     "## 검색\n",
     "\n",
     "* 식당 검색에는 [Kakao 지도/로컬 API](https://developers.kakao.com/features/platform#%EC%A7%80%EB%8F%84-%EB%A1%9C%EC%BB%AC)를 사용하였습니다.\n",
-    "  * 검색 시 음식점 카테고리(FD6)로 검색하였습니다.\n",
+    "  * [키워드로 장소 검색 API](https://developers.kakao.com/docs/restapi/local#%ED%82%A4%EC%9B%8C%EB%93%9C-%EA%B2%80%EC%83%89)를 사용하였고, 검색 시 음식점 카테고리(FD6)로 검색하였습니다.\n",
     "  * `동 이름`과 `음식점 이름`으로 검색하였으며 `음식점 이름`에 괄호가 있는 경우 괄호 및 괄호 안의 내용은 무시합니다.\n",
     "  * 검색 결과의 첫번째 값을 사용하였으며 없는 경우에는 무시합니다.\n",
-    "* [GeoJSON](https://tools.ietf.org/html/rfc7946) 형태로 정리하였습니다.\n",
-    "\n",
-    "## 결과\n"
+    "* [GeoJSON](https://tools.ietf.org/html/rfc7946) 형태로 정리하였습니다.\n"
    ]
   },
   {
@@ -196,6 +194,59 @@
     "        json_file.write(\"]}\\n\")\n",
     "\n",
     "print(\"Done\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 결과\n",
+    "\n",
+    "* [평양냉면](geo/평양냉면.geojson)\n",
+    "* [메밀국수(소바)](geo/메밀국수(소바).geojson)\n",
+    "* [막국수](geo/막국수.geojson)\n",
+    "* [콩국수](geo/콩국수.geojson)\n",
+    "* [국밥,해장국](geo/국밥,해장국.geojson)\n",
+    "* [설렁탕](geo/설렁탕.geojson)\n",
+    "* [감자탕](geo/감자탕.geojson)\n",
+    "* [순대](geo/순대.geojson)\n",
+    "* [닭볶음탕](geo/닭볶음탕.geojson)\n",
+    "* [추어탕](geo/추어탕.geojson)\n",
+    "* [육개장](geo/육개장.geojson)\n",
+    "* [대구탕](geo/대구탕.geojson)\n",
+    "* [김밥](geo/김밥.geojson)\n",
+    "* [김치찌개](geo/김치찌개.geojson)\n",
+    "* [부대찌개](geo/부대찌개.geojson)\n",
+    "* [청국장](geo/청국장.geojson)\n",
+    "* [된장](geo/된장.geojson)\n",
+    "* [간장게장](geo/간장게장.geojson)\n",
+    "* [삼계탕](geo/삼계탕.geojson)\n",
+    "* [보쌈](geo/보쌈.geojson)\n",
+    "* [족발](geo/족발.geojson)\n",
+    "* [치킨](geo/치킨.geojson)\n",
+    "* [돈까스](geo/돈까스.geojson)\n",
+    "* [함박스테이크](geo/함박스테이크.geojson)\n",
+    "* [떡볶이](geo/떡볶이.geojson)\n",
+    "* [라면](geo/라면.geojson)\n",
+    "* [라멘](geo/라멘.geojson)\n",
+    "* [우동](geo/우동.geojson)\n",
+    "* [튀김](geo/튀김.geojson)\n",
+    "* [순두부,두부](geo/순두부,두부.geojson)\n",
+    "* [피자](geo/피자.geojson)\n",
+    "* [아이스크림,젤라또](geo/아이스크림,젤라또.geojson)\n",
+    "* [갓포요리집](geo/갓포요리집.geojson)\n",
+    "* [죽](geo/죽.geojson)\n",
+    "* [덮밥,백반,벤또(도시락)](geo/덮밥,백반,벤또(도시락).geojson)\n",
+    "* [꼬치구이,로바다야끼](geo/꼬치구이,로바다야끼.geojson)\n",
+    "* [냉동삼겹살](geo/냉동삼겹살.geojson)\n",
+    "* [기사식당](geo/기사식당.geojson)\n",
+    "* [스테이크,BBQ](geo/스테이크,BBQ.geojson)\n",
+    "* [칼국수](geo/칼국수.geojson)\n",
+    "* [수제맥주,맥주맛있는곳](geo/수제맥주,맥주맛있는곳.geojson)\n",
+    "* [아구찜](geo/아구찜.geojson)\n",
+    "* [생선구이&조림](geo/생선구이&조림.geojson)\n",
+    "* [돼지갈비](geo/돼지갈비.geojson)\n",
+    "* [돼지고기](geo/돼지고기.geojson)\n"
    ]
   }
  ],
