README 반영, 중복 방지/제거

--- a/Seoul-MatZip-2019.ipynb
+++ b/Seoul-MatZip-2019.ipynb
@@ -6,11 +6,14 @@
    "source": [
     "# 시사플러스 2019 서울맛집 지도화\n",
     "\n",
+    "### 현재 위치에서 가까운 맛집을 [mz.moim.at](https://mz.moim.at)에서 확인하실 수 있습니다. (위치 권한 필요)\n",
+    "\n",
     "## 개요\n",
     "\n",
     "* [시사플러스 '2019 서울맛집' 기사](http://m.sisaplusnews.com/news/articleView.html?idxno=22423)의 맛집들을 지도 위에 표시하는 프로젝트입니다.\n",
     "* 정확한 위치를 표시하기보다는 카테고리별 맛집의 분포 등을 재미삼아 보는 것을 목표로 하였습니다.\n",
     "* 이 프로젝트는 [Chang-Joo Park](https://github.com/ChangJoo-Park)님께서 먼저 제안하시고 GeoJSON 사용법 등을 보여주셨습니다. 감사합니다. (_ _)\n",
+    "* 잘못된 정보나 기능 추가는 [Issue](https://github.com/9bow/Seoul-MatZip-2019/issues) 또는 [Pull Request](https://github.com/9bow/Seoul-MatZip-2019/pulls) 부탁드립니다.\n",
     "\n",
     "## 정제\n",
     "\n",
@@ -27,7 +30,13 @@
     "  * [키워드로 장소 검색 API](https://developers.kakao.com/docs/restapi/local#%ED%82%A4%EC%9B%8C%EB%93%9C-%EA%B2%80%EC%83%89)를 사용하였고, 검색 시 음식점 카테고리(FD6)로 검색하였습니다.\n",
     "  * `동 이름`과 `음식점 이름`으로 검색하였으며 `음식점 이름`에 괄호가 있는 경우 괄호 및 괄호 안의 내용은 무시합니다.\n",
     "  * 검색 결과의 첫번째 값을 사용하였으며 없는 경우에는 무시합니다.\n",
-    "* [GeoJSON](https://tools.ietf.org/html/rfc7946) 형태로 정리하였습니다.\n"
+    "* [GeoJSON](https://tools.ietf.org/html/rfc7946) 형태로 정리하였습니다.\n",
+    "\n",
+    "## 코드\n",
+    "\n",
+    "* 데이터 검색을 위한 전체 코드는 [Seoul-MatZip-2019.ipynb](https://nbviewer.jupyter.org/github/9bow/Seoul-MatZip-2019/blob/master/Seoul-MatZip-2019.ipynb)에서 보실 수 있습니다.\n",
+    "  * Python 코드이며, 실행을 하기 위해서는 Jupyter Notebook과 Kakao API Key가 필요합니다.\n",
+    "* [mz.moim.at](https://mz.moim.at)의 소스코드는 [gh-pages 브랜치](https://github.com/9bow/Seoul-MatZip-2019/tree/gh-pages)에서 보실 수 있습니다."
    ]
   },
   {
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,6 +164,7 @@
     "for cate in categories:\n",
     "    filename = \"geo/{}.geojson\".format(cate.replace(' ', ''))\n",
     "    is_first = True\n",
+    "    dupl_chk = set()\n",
     "    \n",
     "    with open(filename, \"w\", encoding=\"utf-8\") as json_file:\n",
     "        print(\"Writing '{}'...\".format(filename))\n",
@@ -172,16 +182,22 @@
     "\n",
     "            params['query'] = query\n",
     "            response = requests.request(\"GET\", url, headers=headers, params=params)\n",
-    "\n",
     "            data = response.json()\n",
     "\n",
+    "            if len(data['documents']) < 1:\n",
+    "                continue\n",
+    "\n",
+    "            if data['documents'][0]['id'] in dupl_chk:\n",
+    "                continue\n",
+    "            else:\n",
+    "                dupl_chk.add(data['documents'][0]['id'])\n",
+    "\n",
     "            geoitem = geoitem_proto\n",
-    "            if len(data['documents']) >= 1:\n",
-    "                geoitem['geometry']['coordinates'] = [float(data['documents'][0]['x']), float(data['documents'][0]['y'])]\n",
-    "                geoitem['properties']['name'] = data['documents'][0]['place_name']\n",
-    "                geoitem['properties']['source'] = matzip\n",
-    "                geoitem['properties']['address'] = data['documents'][0]['road_address_name']\n",
-    "                geoitem['properties']['website'] = data['documents'][0]['place_url']\n",
+    "            geoitem['geometry']['coordinates'] = [float(data['documents'][0]['x']), float(data['documents'][0]['y'])]\n",
+    "            geoitem['properties']['name'] = data['documents'][0]['place_name']\n",
+    "            geoitem['properties']['source'] = matzip\n",
+    "            geoitem['properties']['address'] = data['documents'][0]['road_address_name']\n",
+    "            geoitem['properties']['website'] = data['documents'][0]['place_url']\n",
     "\n",
     "            if is_first:\n",
     "                is_first = False\n",
@@ -200,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 결과\n",
+    "## 결과 (GeoJSON 형태)\n",
     "\n",
     "* [평양냉면](geo/평양냉면.geojson)\n",
     "* [메밀국수(소바)](geo/메밀국수(소바).geojson)\n",
@@ -246,7 +262,11 @@
     "* [아구찜](geo/아구찜.geojson)\n",
     "* [생선구이&조림](geo/생선구이&조림.geojson)\n",
     "* [돼지갈비](geo/돼지갈비.geojson)\n",
-    "* [돼지고기](geo/돼지고기.geojson)\n"
+    "* [돼지고기](geo/돼지고기.geojson)\n",
+    "\n",
+    "## 결과 (지도 형태)\n",
+    "\n",
+    "* 현재 위치에서 가까운 맛집을 [mz.moim.at](https://mz.moim.at)에서 확인하실 수 있습니다. (위치 권한 필요)\n"
    ]
   }
  ],
