ID, 전화번호 추가

--- a/Seoul-MatZip-2019.ipynb
+++ b/Seoul-MatZip-2019.ipynb
@@ -194,7 +194,9 @@
     "\n",
     "            geoitem = geoitem_proto\n",
     "            geoitem['geometry']['coordinates'] = [float(data['documents'][0]['x']), float(data['documents'][0]['y'])]\n",
+    "            geoitem['properties']['pid'] = data['documents'][0]['id']\n",
     "            geoitem['properties']['name'] = data['documents'][0]['place_name']\n",
+    "            geoitem['properties']['phone'] = data['documents'][0]['phone']\n",
     "            geoitem['properties']['source'] = matzip\n",
     "            geoitem['properties']['address'] = data['documents'][0]['road_address_name']\n",
     "            geoitem['properties']['website'] = data['documents'][0]['place_url']\n",
