--- a/Seoul-MatZip-2019.ipynb
+++ b/Seoul-MatZip-2019.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "* [시사플러스 '2019 서울맛집' 기사](http://m.sisaplusnews.com/news/articleView.html?idxno=22423)의 맛집들을 지도 위에 표시하는 프로젝트입니다.\n",
     "* 정확한 위치를 표시하기보다는 카테고리별 맛집의 분포 등을 재미삼아 보는 것을 목표로 하였습니다.\n",
-    "* 이 프로젝트는 [Chang-Joo Park](https://github.com/ChangJoo-Park)님께서 먼저 제안하시고 GeoJSON 사용법 등을 보여주셨습니다. 감사합니다. (_ _)\n",
+    "* 이 프로젝트는 [Chang-Joo Park](https://github.com/ChangJoo-Park)님께서 먼저 제안하시고 GeoJSON 사용법 등을 보여주시는 것으로 시작하였습니다.\n",
     "* 잘못된 정보나 기능 추가는 [Issue](https://github.com/9bow/Seoul-MatZip-2019/issues) 또는 [Pull Request](https://github.com/9bow/Seoul-MatZip-2019/pulls) 부탁드립니다.\n",
     "\n",
     "## 정제\n",
@@ -36,7 +36,7 @@
     "\n",
     "* 데이터 검색을 위한 전체 코드는 [Seoul-MatZip-2019.ipynb](https://nbviewer.jupyter.org/github/9bow/Seoul-MatZip-2019/blob/master/Seoul-MatZip-2019.ipynb)에서 보실 수 있습니다.\n",
     "  * Python 코드이며, 실행을 하기 위해서는 Jupyter Notebook과 Kakao API Key가 필요합니다.\n",
-    "* [mz.moim.at](https://mz.moim.at)의 소스코드는 [gh-pages 브랜치](https://github.com/9bow/Seoul-MatZip-2019/tree/gh-pages)에서 보실 수 있습니다."
+    "* [mz.moim.at](https://mz.moim.at)의 소스코드는 GitHub 저장소의 [docs/](https://github.com/9bow/Seoul-MatZip-2019/tree/master/docs)에서 보실 수 있습니다."
    ]
   },
   {
